# finpath-newsroom

./: .gitignore  CLAUDE.md  pyproject.toml  setup.sh
data/: format_registry.yaml  pipeline.schema.sql  secrets.yaml.example  sector_routing.yaml  sector_thumb_motif.yaml
lib/: backfill_manifest_category.py  brief_central_thesis.py  finpath_api.py  finpath_sectors.py  finpath_top_movers.py  format_picker_logic.py  format_registry.py  headline_scorer.py  intra_batch_dedup.py  kb_bds_validator.py  kb_ingest.py  kb_loader.py  notion_fetch.py  pipeline_db.py  quality_gates.py  refresh_sector_cache.py  render_compare_feed.py  sector_router.py  slugify.py  tavily_crawler.py  telegram_publisher.py  ticker_universe.py  voice_rules.py
prompts/: gemini_master.md  gemini_writer.md  grok_master.md  grok_writer.md  image_prompt_template.md
scripts/: backfill_gemini.py  backfill_grok.py  backfill_vpb_data_trail.py  publish_telegram.py  rerender_after_backfill.sh  restore_brief_json.py
tests/: test_aggregate_costs.py  test_brief_central_thesis.py  test_build_pipeline_runs_manifest.py  test_company_name_mapping_v5_1_3.py  test_editor_v1_v5_1_3.py  test_finpath_api.py  test_finpath_api_foreign.py  test_finpath_foreign_cache_schema.py  test_finpath_sectors.py  test_finpath_top_movers.py  test_format_picker_logic.py  test_format_registry.py  test_gemini_client.py  test_gemini_master.py  test_grok_client.py  test_grok_master.py  test_headline_integration.py  test_headline_scorer.py  test_imagen_client.py  test_intra_batch_dedup.py  test_kb_bds_validator.py  test_kb_loader.py  (+30 more)
(+550 files in other folders)
