[project]
name = "finpath-newsroom"
version = "0.1.0"
description = "Finpath Newsroom V3.6 — Claude Code CLI migration"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32",
    "pyyaml>=6.0",
    "python-frontmatter>=1.1",
    "google-genai>=1.0",
    "openai>=1.50",
    "pillow>=12.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "responses>=0.25",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "integration: live API tests, opt-in via -m integration",
]
addopts = "-m 'not integration'"
